--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -26,7 +26,7 @@
         <br>
         <label>
             Complexity:
-            <input type="range" id="complexity_slider" name="complexity" min="1" max="10" value="10">
+            <input type="range" id="complexity-slider" name="complexity" min="1" max="10" value="10">
         </label>
         <br>
         <button type="button" onclick="fetchData()">Submit</button>
