showing error message, do not use onlick

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -29,7 +29,9 @@
             <input type="range" id="complexity-slider" name="complexity" min="1" max="10" value="10">
         </label>
         <br>
-        <button type="button" onclick="fetchData()">Submit</button>
+        <button type="button" id="submit-button">Submit</button>
+        <script src="popup.js"></script>
+        <script src="fetch_data.js"></script>
     </form>
 </body>
 
