css/html updates, add temp loading wheel
ui design is hard

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -8,31 +8,34 @@
 </head>
 
 <body>
-    <form>
-        <label>
-            Enter text:
-            <input type="text" id="input-text" name="input">
-        </label>
-        <br>
-        <div id="message"></div>
-        <br>
-        <label>
-            <input type="checkbox" id="summary_box" name="summary" value="true"> Summarize
-        </label>
-        <br>
-        <label>
-            <input type="checkbox" id="condense_box" name="condense" value="true"> Condense
-        </label>
-        <br>
-        <label>
-            Complexity:
-            <input type="range" id="complexity-slider" name="complexity" min="1" max="10" value="10">
-        </label>
-        <br>
-        <button type="button" id="submit-button">Submit</button>
-        <script src="popup.js"></script>
-        <script src="fetch_data.js"></script>
-    </form>
+    <div class="container">
+        <h1>Rundown</h1>
+        <form>
+            <label for="input-text">
+                Enter text:
+                <input type="text" id="input-text" name="input">
+            </label>
+            <br>
+            <div id="message"></div>
+            <br>
+            <label for="summary_box">
+                <input type="checkbox" id="summary_box" name="summary" value="true"> Summary
+            </label>
+            <br>
+            <label for="condense_box">
+                <input type="checkbox" id="condense_box" name="condense" value="true"> Condense
+            </label>
+            <br>
+            <label>
+                Complexity:
+                <input type="range" id="complexity-slider" name="complexity" min="1" max="10" value="10">
+            </label>
+            <br>
+            <button type="button" id="submit-button">Submit</button>
+            <div id="spinner" class="spinner"></div>
+        </form>
+    </div>
 </body>
+
 
 </html>
